--- a/gb/16/6/26/n8038383.md
+++ b/gb/16/6/26/n8038383.md
@@ -13,7 +13,6 @@
 <p>不过，现代人多用它减肥，因为苦瓜里含有一定量的清脂素，清脂素会不断将你的体内原有的热量和脂肪消化干净，从而让人失去胖的机会。</p>
 <p><strong>◎减肥配方参考</strong></p>
 <p>苦瓜阴干碾粉，每次10～30克，温开水200毫升早、中、晚餐前直接冲服，或者餐后半小时冲服，效果好的一月可减12～24公斤。注意：怕冷、脾胃虚寒忌服。</p>
-<figure id="attachment_10442100" aria-describedby="caption-attachment-10442100" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/06/shutterstock_303522863.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-10442100" src="https://i.epochtimes.com/assets/uploads/2016/06/shutterstock_303522863-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10442100" class="wp-caption-text">苦瓜养血益气、解毒，止渴消暑。有协助减肥和降血糖的作用。(Shutterstock)</figcaption></figure>
 <h2><span style="color: #008000;"><strong>吃苦瓜降血糖、改善糖尿病</strong></span></h2>
 <p>苦瓜也是糖尿病患者的辅助治疗食品。因为苦瓜的新鲜汁液，含有苦瓜甙和类似胰岛素的物质，具有良好的降血糖作用。苦瓜若和粟米同煮，对于老年糖尿病并发视网膜病变患者，也有很好效果。</p>
 <p><strong>◎治糖尿病配方参考</strong></p>
@@ -27,7 +26,6 @@
 <p>相传在明朝永乐三年，郑和奉圣旨率领士兵三万人，楼船62艘，从中国南京出发，经泰国、越南、新加坡、龙牙门、马辰、泗水、帝汶岛、吕宋、马达维亚、马六甲，最远到达印度和非洲东岸。先后7次，传播中国文化，交流中外物产。</p>
 <p>据明代费信着《星槎胜览》记载，郑和当时带当时去带了许多蔬菜、菜种，以及鱼肉等产品远航。其中的有一种鱼叫乌鳢鱼（即生鱼），适宜在亚热带繁殖，故传布到南洋各地，后传播到美洲各地，成为华侨常吃的鱼类之一。后人称乌鳢鱼为“唐人鱼”。</p>
 <p>而作为乌鳢鱼传播到南洋的交换物品，其中之一便是苦瓜。苦瓜适宜于热带、亚热带地区生长，因此中国广东、台湾，湖南南部，以及闽南都有种植。</p>
-<figure id="attachment_9580402" aria-describedby="caption-attachment-9580402" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/0b5bdab27335c396df0006f706d823d6-e1504070606141.jpg"><img loading="lazy" decoding="async" class="wp-image-9580402 size-large" src="https://i.epochtimes.com/assets/uploads/2017/08/0b5bdab27335c396df0006f706d823d6-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-9580402" class="wp-caption-text">肥胖且脾胃健康者、糖尿病患者适合吃苦瓜；脾胃虚寒者不适合吃苦瓜。(Pixabay)</figcaption></figure>
 <h2><span style="color: #008000;"><strong>※吃苦瓜最佳人群</strong></span></h2>
 <p>1. 肥胖且脾胃健康者，或者身体体质偏热者。</p>
 <p>2. 糖尿病患者。</p>
@@ -57,41 +55,38 @@
 <h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7931033.md#1">降血糖的15个天然方法</a></span></h2>
 <p>责任编辑：张静婵</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/7/n7971706.md#1">暑夏老上火 五种食物帮你消内火</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/19/n8013555.md#1">扭转小孩挑食习惯  轻松六招吃出健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/21/n8018785.md#1">夏至清热消火气  多吃苦瓜和绿豆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/8/13/n9523952.md#1">工人中暑昏迷记忆停27年前 医：脑细胞被煮熟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/8/14/n9528976.md#1">5种味道能治病 搭配吃出身体平衡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/7/n10199371.md#1">这些中医养生口诀  记住了病都怕你三分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340404.md#1">吃小鱼比大鱼更健康 两类人不宜吃大鱼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341964.md#1">阅读食品包装上的标签对健康至关重要</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14338975.md#1">紫色韩国竹盐－健康功效卓越的佳品</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/5/n10029772.md#1" target="_blank">林辉：中共翻云覆雨 齐白石去世后被打倒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489082.md#1" target="_blank">反迫害20周年 34国法轮功学员伦敦集会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/1/n11293536.md#1" target="_blank">【征文】元正戊：弦高退秦军救郑国后为何拒受重赏</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340379.md#1">《消失的时间》：穿越当下的奇幻 孤寂中守望爱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341345.md#1">【未解之谜】全美最著名“鬼屋” 白宫里的那些灵异事件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344409.md#1">【新闻看点】习遭剪裙边？军队“监斩官”被贬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344413.md#1">【菁英论坛】央行做庄 A股走出把大镰刀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344344.md#1">油车电车大对决 2024 NWAPA Drive Revolution</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343566.md#1">分析：中国经济有多糟 每个领域都在走衰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341522.md#1">任志强女儿致信习近平 吁允许父亲出国治疗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343917.md#1">大摩对中国股市发声 业内：大利空 偏悲观</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342923.md#1">赵丽颖被爆每次为全剧组聚餐买单 原因超搞笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344274.md#1">投资2亿 票房不足2千万 《出入平安》宣布撤档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343589.md#1">王一博沙漠拍节目意外翻车 转大圈画面超惊悚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344296.md#1">刘德华为什么不用微博？真实原因令人震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342874.md#1">曾被传二婚嫁高官 佟丽娅“离异单身”登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341190.md#1">自创的切鳯梨小妙招 超简单又美观</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/19/n14184709.md#1">我家必种神草 修护油痘烫晒伤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343911.md#1">这10件事伤肾 肾脏病专家不会做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343260.md#1">买二手车要注意6个危险信号 以免当冤大头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340410.md#1">湿气恐致三高脂肪肝 饮食按摩有效排湿</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/6/26/n8038383.htm">苦瓜天然抗癌、改善糖尿病 5种人不适合吃</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/16/6/26/n8038383.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
